Before Dependency Injection

--- a/NZWalksAPI/appsettings.json
+++ b/NZWalksAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalksConnectionString": "Server=DESKTOP-E75UD99\\SQLEXPRESS;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
